<?xml version="1.0"?>
<package format="2">
  <name>visy_user_interface_pkg</name>
  <version>0.0.1</version>
  <description>-</description>

  <maintainer email="deltarobotone@web.de">-</maintainer>

  <license>LGPLv3</license>

  <author>deltarobotone</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>boost</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>visy_sorting_app_pkg</build_depend>
  <build_depend>visy_detector_pkg</build_depend>  
  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>boost</exec_depend>
  <exec_depend>libopencv-dev</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>visy_sorting_app_pkg</exec_depend>
  <exec_depend>visy_detector_pkg</exec_depend>

  <build_export_depend>libopencv-dev</build_export_depend>
</package>
